# ecommerce-feishu-ai-workbench

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  case-study.md  data-contracts.md  data-governance.md  demo-script.md  dependencies.md  open-source-references.md  operations.md  project-brief.md  resume-value.md  security-and-data-boundary.md
outputs/: sample-generated-products.json  sample-jd-lamp-competitor-analysis.json
samples/: jd-lamp-urls.example.json  product-input-template.json  products.json  shop-workbench.example.json
src/: __init__.py  ai_client.py  ai_enrichment.py  browser_config.py  competitor_analysis.py  competitor_models.py  feishu_client.py  feishu_schema.py  generator.py  jd_discovery.py  jd_feishu_schema.py  jd_parser.py  jd_scraper.py  main.py  models.py  shop_workbench_schema.py
tests/: test_ai_client.py  test_ai_enrichment.py  test_browser_config.py  test_cli.py  test_competitor_analysis.py  test_competitor_models.py  test_feishu_client.py  test_feishu_schema.py  test_generator.py  test_jd_discovery.py  test_jd_feishu_schema.py  test_jd_parser.py  test_jd_scraper.py  test_models.py  test_shop_workbench_schema.py
